[project]
name = "miningeval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index>=0.14.13",
    "llama-index-llms-openai>=0.6.18",
    "llama-parse>=0.6.54",
    "python-dotenv>=1.2.1",
    "streamlit>=1.54.0",
]
